added template upload api, and now template will delete automatically delete after sending bytes response
